--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@bogeychan/elysia-oauth2": "^0.1.0",
     "elysia": "latest",
     "openid-client": "^6.8.1"
   },
