--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,70 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# =========================================================
+# Root .gitignore (React + Vite + Elysia + Bun + PostgreSQL)
+# =========================================================
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# --- Node / Bun dependencies ---
+node_modules/
+bun.lockb
+bun.lock
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# --- Build outputs ---
+dist/
+build/
+out/
+tmp/
+temp/
+
+# --- Frontend (Vite / React) ---
+client/node_modules/
+client/dist/
+client/.env
+client/.DS_Store
+
+# --- Backend (Elysia / Bun) ---
+backend/node_modules/
+backend/dist/
+backend/.env
+backend/.DS_Store
+
+# --- Logs ---
+*.log
+logs/
+*.pid
+*.seed
+*.pid.lock
+
+# --- Environment files ---
 .env
-# vercel
-.vercel
+.env.*
+!.env.example
 
-**/*.trace
-**/*.zip
-**/*.tar.gz
-**/*.tgz
-**/*.log
-package-lock.json
-**/*.bun
+# --- IDE & OS files ---
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# --- TypeScript ---
+*.tsbuildinfo
+
+# --- Testing ---
+coverage/
+*.spec.ts
+*.test.ts
+jest.config.js
+vitest.config.ts
+
+# --- Misc ---
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# --- Docker (optional, ถ้าใช้) ---
+docker-compose.override.yml
+.docker/
+Dockerfile.dev
