--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev:client": "bun run --filter client dev",
     "build": "bun run build:server && bun run build:client",
     "build:server": "bun run --filter server build",
-    "build:client": "bun run --filter client build",
-    "install:all": "bun install"
+    "build:client": "bun run --filter client build"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
