--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "@fullcalendar/react": "^6.1.19",
+    "fullcalendar": "^6.1.19"
   }
 }
