basic add event successfully
popup can fill event name and add to calendar

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fullcalendar/react": "^6.1.19",
-    "fullcalendar": "^6.1.19"
+    "fullcalendar": "^6.1.19",
+    "mysql2": "^3.15.3"
   }
 }
