--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@elysiajs/jwt": "^1.4.0",
     "@tailwindcss/vite": "^4.1.14",
     "arctic": "^3.7.0",
+    "bcryptjs": "^3.0.3",
     "elysia": "latest",
     "elysia-oauth2": "^2.1.0",
     "tailwindcss": "^4.1.14"
