--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "fullcalendar": "^6.1.19",
     "mysql2": "^3.15.3"
