--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "bcryptjs": "^3.0.2",
     "fullcalendar": "^6.1.19",
     "mysql2": "^3.15.3",
-    "bcryptjs": "^3.0.2"
+    "nanoid": "^5.1.6"
   }
 }
